# water-level-agentic-chart-rag

./: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
evals/: annotate_manual_eval.py  build_ground_truth_with_llm.py  manual_eval_log.csv  manual_eval_log_evaluated.csv  manual_eval_log_output.csv  manual_eval_log_with_gt.csv  questions.yaml  run_manual_eval.py  summarize_ground_truth_eval.py
monitoring/: __init__.py  app.py  callbacks.py  config.py  db.py  evaluator.py  logging.py  parser.py  runner.py  schemas.py  sources.py
monitoring/grafana/dashboards/: failures.json  overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
notebooks/: find_eval_stations.ipynb
scripts/: guardrails.py  ingest_data.py  invoke_agent.py  usgs_agent.py
tests/: test_search.py
tests/judge/: test_agent_answers_with_judge.py
tests/unit/: test_agent_response_structure.py  test_guardrails.py
